# real-estate-ml

./: .gitignore  Makefile  README.md  c  environment.yml  now.txt  pyproject.toml  requirements.txt  scrapy.cfg
docs/: mkdocs.yml
docs/docs/: commit-patterns.md  data_processing.md  eda.md  getting-started.md  index.md  modeling.md  overview.md  project_structure.md  scraping.md  usage.md
notebooks/: 01-titanic-exploratory-data-analysis.ipynb
real_estate_ml/: __init__.py  config.py  dataset.py  eda.py  features.py  plots.py
real_estate_ml/legacy_scraping/: pipelines.py  settings.py
real_estate_ml/legacy_scraping/collectors/: zap_collector.py
real_estate_ml/legacy_scraping/spiders/: olx_api_spider.py  olx_selenium_spider.py
real_estate_ml/modeling/: predict.py  train.py
real_estate_ml/processing/: raw_data_processor.py  zap_processor.py
real_estate_ml/scraping/: items.py  olx_api_collector.py  pipelines.py  settings.py
real_estate_ml/scraping/collectors/: olx_collector.py
real_estate_ml/scraping/spiders/: __init__.py  base_selenium_spider.py  olx_api_spider.py  olx_selenium_spider.py  olx_spider.py
scraping/: items.py  settings.py
scraping/spiders/: olx_spider.py
scripts/: process_raw_data.py
titanic_ml/: __init__.py  dataset.py  features.py  plots.py
titanic_ml/modeling/: predict.py  train.py
