[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "titanic_ml"
version = "0.0.1"
description = "Titanic survivor prediction with Machine Learning"
authors = [
  { name = "diegodoc" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"


[tool.ruff]
line-length = 99
src = ["titanic_ml"]
include = ["pyproject.toml", "titanic_ml/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["titanic_ml"]
force-sort-within-sections = true

