[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "real_estate_ml"
version = "0.0.1"
description = "Real Estate classification and categorization using Machine Learning"
authors = [
  { name = "diegodoc" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"


[tool.ruff]
line-length = 99
src = ["real_estate_ml"]
include = ["pyproject.toml", "real_estate_ml/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["real_estate_ml"]
force-sort-within-sections = true

